[metadata]
name = django-drf_advanced_token
version = 2.0.1
description = More advanced features for the Django Rest Framework rest_framework.authtoken app
long_description = file: README.rst
url = https://github.com/amp89/drf_advanced_token
author = Alex Peterson
license_file = LICENSE

[options]
include_package_data = true
packages = find: